--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,14 +15,15 @@
   <body>
     <div class="wrapper">
       <header>
-        <img style="width:80%" src="assets/images/manon.png" alt="MREAU_picture"></div>
+        <img style="width:80%" src="assets/images/manon.png" alt="MREAU_picture">
         <h1 class="header">{{ site.title | default: site.github.repository_name }}</h1>
         <p class="header">{{ site.description | default: site.github.project_tagline }}</p>
 
         <ul>
           {% if site.show_downloads %}
-            <li class="download"><a class="buttons" href="{{ site.github.zip_url }}">Download ZIP</a></li>
-            <li class="download"><a class="buttons" href="{{ site.github.tar_url }}">Download TAR</a></li>
+            <li class="download"><a class="buttons" href="{{ site.github.zip_url }}">Curriculum Vitae</a></li>
+            <li class="download"><a class="buttons" href="{{ site.github.tar_url }}">Research projects</a></li>
+            <li class="download"><a class="buttons" href="{{ site.github.tar_url }}">Teaching projects</a></li>
           {% endif %}
           <li><a class="buttons github" href="{{ site.github.repository_url }}">View On GitHub</a></li>
         </ul>
