--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,6 +24,7 @@
             <li class="download"><a class="buttons" href="{{ site.github.zip_url }}">Curriculum Vitae</a></li>
             <li class="download"><a class="buttons" href="{{ site.github.tar_url }}">Research projects</a></li>
             <li class="download"><a class="buttons" href="{{ site.github.tar_url }}">Teaching projects</a></li>
+            <li class="download"><a class="buttons" href="{{ site.github.tar_url }}">Publictions</a></li>
           {% endif %}
         </ul>
 
