--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,7 +29,11 @@
         </ul>
 
         {% if site.github.is_project_page %}
-          <p class="header">This project is maintained by <a class="header name" href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
+          <p class="header">Laboratoire GBA <\br>
+            Conservatoire National des Arts et Métiers <\br>
+            2 rue conté<\br>
+            75001 Paris, FRANCE<\br>
+            <a href="mailto:manon.reau@lecnam.net">manon.reau@lecnam.net</a></p>
         {% endif %}
 
         {% if site.github.is_user_page %}
