--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,10 +29,10 @@
         </ul>
 
         {% if site.github.is_project_page %}
-          <p class="header">Laboratoire GBA <\br>
-            Conservatoire National des Arts et Métiers <\br>
-            2 rue conté<\br>
-            75001 Paris, FRANCE<\br>
+          <p class="header">Laboratoire GBA <br>
+            CNAM <br>
+            2 rue conté<br>
+            75001 Paris, FRANCE<br>
             <a href="mailto:manon.reau@lecnam.net">manon.reau@lecnam.net</a></p>
         {% endif %}
 
