--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,7 +24,7 @@
             <li class="download"><a class="buttons" href="{{ site.github.zip_url }}">Curriculum Vitae</a></li>
             <li class="download"><a class="buttons" href="{{ site.github.tar_url }}">Research projects</a></li>
             <li class="download"><a class="buttons" href="{{ site.github.tar_url }}">Teaching projects</a></li>
-            <li class="download"><a class="buttons" href="{{ site.github.tar_url }}">Publictions</a></li>
+            <li class="download"><a class="buttons" href="{{ site.github.tar_url }}">Publications</a></li>
           {% endif %}
         </ul>
 
@@ -48,7 +48,6 @@
       </section>
 
       <footer>
-        <p><small>Hosted on <a href="https://pages.github.com">GitHub Pages</a> using the Dinky theme</small></p>
       </footer>
     </div>
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
