--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,7 +29,7 @@
         </ul>
 
         {% if site.github.is_project_page %}
-          <p class="header">Laboratoire GBA <br>
+          <p class="header" id="contact">Laboratoire GBA <br>
             CNAM <br>
             2 rue conté<br>
             75001 Paris, FRANCE<br>
