--- a/_sass/jekyll-theme-dinky.scss
+++ b/_sass/jekyll-theme-dinky.scss
@@ -221,7 +221,7 @@ td {
 header {
 	background-color: #171717;
 	color: #FDFDFB;
-  width:170px;
+  width:20%;
   float:left;
   position:fixed;
 	border: 1px solid #000;
