--- a/_sass/jekyll-theme-dinky.scss
+++ b/_sass/jekyll-theme-dinky.scss
@@ -221,7 +221,7 @@ td {
 header {
 	background-color: #171717;
 	color: #FDFDFB;
-  width:18%;
+  width:170px;
   float:left;
   position:fixed;
 	border: 1px solid #000;
@@ -324,7 +324,7 @@ a.buttons:hover {
 /* Section - for main page content */
 
 section {
-  width:80%;
+  width:650px;
   float:right;
   padding-bottom:50px;
 }
