--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,10 +20,10 @@
 
         <ul>
           {% if site.show_downloads %}
-            <li class="download"><a class="buttons" href="{{ site.github.zip_url }}">Curriculum Vitae</a></li>
-            <li class="download"><a class="buttons" href="{{ site.github.tar_url }}">Research projects</a></li>
-            <li class="download"><a class="buttons" href="{{ site.github.tar_url }}">Teaching projects</a></li>
-            <li class="download"><a class="buttons" href="{{ site.github.tar_url }}">Publications</a></li>
+            <li class="download"><a class="buttons" href="{{ site.pages.CV }}">Curriculum Vitae</a></li>
+            <li class="download"><a class="buttons" href="{{ site.pages.Research_projects }}">Research projects</a></li>
+            <li class="download"><a class="buttons" href="{{ site.github.Teaching_projects }}">Teaching projects</a></li>
+            <li class="download"><a class="buttons" href="{{ site.github.Publications }}">Publications</a></li>
           {% endif %}
         </ul>
 
