--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,9 +21,9 @@
         <ul>
           {% if site.show_downloads %}
             <li class="download"><a class="buttons" href="{{ site.pages.CV }}">Curriculum Vitae</a></li>
-            <li class="download"><a class="buttons" href="{{ site.pages.Research_projects }}">Research projects</a></li>
-            <li class="download"><a class="buttons" href="{{ site.github.Teaching_projects }}">Teaching projects</a></li>
-            <li class="download"><a class="buttons" href="{{ site.github.Publications }}">Publications</a></li>
+            <li class="download"><a class="buttons" href="{{ site.pages.research }}">Research projects</a></li>
+            <li class="download"><a class="buttons" href="{{ site.github.teaching }}">Teaching projects</a></li>
+            <li class="download"><a class="buttons" href="{{ site.github.publications }}">Publications</a></li>
           {% endif %}
         </ul>
 
