--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,8 +22,8 @@
           {% if site.show_downloads %}
             <li class="download"><a class="buttons" href="{{ site.pages.CV }}">Curriculum Vitae</a></li>
             <li class="download"><a class="buttons" href="{{ site.pages.research }}">Research projects</a></li>
-            <li class="download"><a class="buttons" href="{{ site.github.teaching }}">Teaching projects</a></li>
-            <li class="download"><a class="buttons" href="{{ site.github.publications }}">Publications</a></li>
+            <li class="download"><a class="buttons" href="{{ site.pages.teaching }}">Teaching projects</a></li>
+            <li class="download"><a class="buttons" href="{{ site.pages.publications }}">Publications</a></li>
           {% endif %}
         </ul>
 
