--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,10 +20,10 @@
 
         <ul>
           {% if site.show_downloads %}
-            <li class="download"><a class="buttons" href="{{ site.pages.CV }}">Curriculum Vitae</a></li>
-            <li class="download"><a class="buttons" href="{{ site.pages.research }}">Research projects</a></li>
-            <li class="download"><a class="buttons" href="{{ site.pages.teaching }}">Teaching projects</a></li>
-            <li class="download"><a class="buttons" href="{{ site.pages.publications }}">Publications</a></li>
+            <li class="download"><a class="buttons" href="{{ site.github.CV }}">Curriculum Vitae</a></li>
+            <li class="download"><a class="buttons" href="{{ site.github.research }}">Research projects</a></li>
+            <li class="download"><a class="buttons" href="{{ site.github.teaching }}">Teaching projects</a></li>
+            <li class="download"><a class="buttons" href="{{ site.github.publications }}">Publications</a></li>
           {% endif %}
         </ul>
 
