--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name = "description" content = "Nuclear receptors, NR-DBIND, Drug Design, CNAM, GBA, Manon Réau, Chemoinformatics, CADD, ISDD, M2ISDD, Caflisch, LBT, MTI, BIRL, SupBiotech, Integration of negative data into benchmarking database">
     <meta name = "keywords" content = "Nuclear receptors, NR-DBIND, Drug Design, CNAM, GBA, Manon Réau, Réau, Chemoinformatics, CADD, ISDD, M2ISDD, Caflisch, LBT, MTI, BIRL, SupBiotech, Integration of negative data into benchmarking database">
-    <meta itemprop="description" name="description" content="{% if page.description %}{{ page.description | truncate: 160 }}{% else %}{{ site.description | truncate: 160  }}{% endif %}" />
+    <meta name = "author" content = "Manon Réau">
     <meta property="og:locale" content="en_US">
     <meta property="og:type" content="article">
     <meta property="og:title" content="{%if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}">
