--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,7 +35,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <div class="wrapper">
       <header>
         <img style="width:70%" src="assets/images/manon.png" alt="MREAU_picture">
-        <a href="https://manonr11.github.io/webpage/"><h1 class="header">{{ site.author | default: site.github.repository_name }}</h1></a>
+        <a href="https://manonreau.github.io/webpage/"><h1 class="header">{{ site.author | default: site.github.repository_name }}</h1></a>
         <p class="header">{{ site.title | default: site.github.project_tagline }}</p>
 
         <ul>
