--- a/_sass/jekyll-theme-dinky.scss
+++ b/_sass/jekyll-theme-dinky.scss
@@ -224,7 +224,7 @@ td {
 /* Header */
 
 header {
-	background-color: #171717;
+	background-color: #92B1F3;
 	color: #FDFDFB;
   width:170px;
   float:left;
