--- a/_sass/jekyll-theme-dinky.scss
+++ b/_sass/jekyll-theme-dinky.scss
@@ -225,7 +225,7 @@ td {
 
 header {
 	background-color: #92B1F3;
-	color: #FDFDFB;
+	color: #336699;
   width:170px;
   float:left;
   position:fixed;
