--- a/_sass/jekyll-theme-dinky.scss
+++ b/_sass/jekyll-theme-dinky.scss
@@ -224,8 +224,8 @@ td {
 /* Header */
 
 header {
-	background-color: #92B1F3;
-	color: #336699;
+	background-color: #94b3d1;
+	color: #fffff;
   width:170px;
   float:left;
   position:fixed;
