--- a/_sass/jekyll-theme-dinky.scss
+++ b/_sass/jekyll-theme-dinky.scss
@@ -225,7 +225,7 @@ td {
 
 header {
 	background-color: #94b3d1;
-	color: #fffff;
+	color: #f2f2f2;
   width:170px;
   float:left;
   position:fixed;
