--- a/_sass/jekyll-theme-dinky.scss
+++ b/_sass/jekyll-theme-dinky.scss
@@ -298,13 +298,13 @@ header li {
 
 
 header li:hover {
-	background: #e60073;
-	background: -moz-linear-gradient(top, #e60073 0%, #b3003b 100%);
+	background: #002699;
+	background: -moz-linear-gradient(top, #002699 0%, #000066 100%);
   background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#f8f8f8), color-stop(100%,#dddddd));
-  background: -webkit-linear-gradient(top, #e60073 0%,#b3003b 100%);
-  background: -o-linear-gradient(top, #e60073 0%,#b3003b 100%);
-  background: -ms-linear-gradient(top, #e60073 0%,#b3003b 100%);
-  background: linear-gradient(to top, #e60073 0%,#b3003b 100%);
+  background: -webkit-linear-gradient(top, #002699 0%,#000066 100%);
+  background: -o-linear-gradient(top, #002699 0%,#000066 100%);
+  background: -ms-linear-gradient(top, #002699 0%,#000066 100%);
+  background: linear-gradient(to top, #002699 0%,#000066 100%);
 }
 
 a.buttons {
