--- a/_sass/jekyll-theme-dinky.scss
+++ b/_sass/jekyll-theme-dinky.scss
@@ -280,13 +280,13 @@ header li {
 	line-height: 1em;
 	padding: 6px 6px 6px 7px;
 
-	background: #babade;
-	background: -moz-linear-gradient(top, #babade 0%, #334d99 100%);
+	background: #2d5986;
+	background: -moz-linear-gradient(top, #babade 0%, #19334d 100%);
   background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#f8f8f8), color-stop(100%,#dddddd));
-  background: -webkit-linear-gradient(top, #babade 0%,#334d99 100%);
-  background: -o-linear-gradient(top, #babade 0%,#334d99 100%);
-  background: -ms-linear-gradient(top, #babade 0%,#334d99 100%);
-  background: linear-gradient(to top, #babade 0%,#334d99 100%);
+  background: -webkit-linear-gradient(top, #2d5986 0%,#19334d 100%);
+  background: -o-linear-gradient(top, #2d5986 0%,#19334d 100%);
+  background: -ms-linear-gradient(top, #2d5986 0%,#19334d 100%);
+  background: linear-gradient(to top, #2d5986 0%,#19334d 100%);
 
 	border-radius:4px;
   border:1px solid #0D0D0D;
@@ -298,13 +298,13 @@ header li {
 
 
 header li:hover {
-	background: #002699;
-	background: -moz-linear-gradient(top, #002699 0%, #000066 100%);
+	background: #008080;
+	background: -moz-linear-gradient(top, #008080 0%, #004d4d 100%);
   background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#f8f8f8), color-stop(100%,#dddddd));
-  background: -webkit-linear-gradient(top, #002699 0%,#000066 100%);
-  background: -o-linear-gradient(top, #002699 0%,#000066 100%);
-  background: -ms-linear-gradient(top, #002699 0%,#000066 100%);
-  background: linear-gradient(to top, #002699 0%,#000066 100%);
+  background: -webkit-linear-gradient(top, #008080 0%,#004d4d 100%);
+  background: -o-linear-gradient(top, #008080 0%,#004d4d 100%);
+  background: -ms-linear-gradient(top, #008080 0%,#004d4d 100%);
+  background: linear-gradient(to top, #008080 0%,#004d4d 100%);
 }
 
 a.buttons {
