--- a/_sass/jekyll-theme-dinky.scss
+++ b/_sass/jekyll-theme-dinky.scss
@@ -281,7 +281,7 @@ header li {
 	padding: 6px 6px 6px 7px;
 
 	background: #2d5986;
-	background: -moz-linear-gradient(top, #babade 0%, #19334d 100%);
+	background: -moz-linear-gradient(top, #2d5986 0%, #19334d 100%);
   background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#f8f8f8), color-stop(100%,#dddddd));
   background: -webkit-linear-gradient(top, #2d5986 0%,#19334d 100%);
   background: -o-linear-gradient(top, #2d5986 0%,#19334d 100%);
