--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,12 +10,12 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <!-- End Google Tag Manager -->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name = "description" content = "Manon Réau, PhD Student in chemoinformatics, CNAM, GBA">
+    <meta name = "description" content = "PhD Student in chemoinformatics, CNAM, GBA <br> Personal webpage">
     <meta name = "keywords" content = "Nuclear receptors, NR-DBIND, Drug Design, CNAM, GBA, Manon Réau, Réau, Chemoinformatics, CADD, ISDD, M2ISDD, Caflisch, LBT, MTI, BIRL, SupBiotech, Integration of negative data into benchmarking database">
     <meta name = "author" content = "Manon Réau">
     <meta property="og:locale" content="en_US">
     <meta property="og:type" content="article">
-    <meta property="og:title" content="{%if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}">
+    <meta property="og:title" content="Manon Réau">
     <meta property="og:image" content="assets/images/site.png">
     <meta property="og:url" content="{{ site.url }}{{ page.url }}">
     <meta property="og:site_name" content="Manon Réau">
