--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,12 +13,13 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <meta name = "description" content = "PhD Student in chemoinformatics, CNAM, GBA <br> Personal webpage">
     <meta name = "keywords" content = "Nuclear receptors, NR-DBIND, Drug Design, CNAM, GBA, Manon Réau, Réau, Chemoinformatics, CADD, ISDD, M2ISDD, Caflisch, LBT, MTI, BIRL, SupBiotech, Integration of negative data into benchmarking database">
     <meta name = "author" content = "Manon Réau">
+    <meta name = "title" content = "Manon Réau Webpage">
     <meta property="og:locale" content="en_US">
     <meta property="og:type" content="article">
-    <meta property="og:title" content="Manon Réau">
+    <meta property="og:title" content="Manon Réau Webpage">
     <meta property="og:image" content="assets/images/site.png">
     <meta property="og:url" content="{{ site.url }}{{ page.url }}">
-    <meta property="og:site_name" content="Manon Réau">
+    <meta property="og:site_name" content="Manon Réau Webpage">
     <meta property="article:published_time" content="{{ page.date }}" />
     <meta property="og:description" content="{% if page.description %}{{ page.description }}{% else %}{{ site.description }}{% endif %}">
 {% seo %}
