--- a/_sass/jekyll-theme-dinky.scss
+++ b/_sass/jekyll-theme-dinky.scss
@@ -38,6 +38,12 @@ body {
 
 }
 
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
 h1, h2, h3, h4, h5, h6 {
   color:#232323;
   margin:36px 0 10px;
