--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,8 +10,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <!-- End Google Tag Manager -->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="description" content="PhD Student in chemoinformatics, CNAM, GBA <br> Personal webpage">
-    <meta name="keywords" content="Nuclear receptors, NR-DBIND, Drug Design, CNAM, GBA, Manon Réau, Réau, Chemoinformatics, CADD, ISDD, M2ISDD, Caflisch, LBT, MTI, BIRL, SupBiotech, Integration of negative data into benchmarking database">
+    <meta name="description" content="PhD in chemoinformatics, CNAM, GBCM <br> Personal webpage">
+    <meta name="keywords" content="Nuclear receptors, NR-DBIND, Drug Design, CNAM, GBCM, Manon Réau, Réau, Chemoinformatics, CADD, ISDD, M2ISDD, Caflisch, LBT, MTI, BIRL, SupBiotech, Integration of negative data into benchmarking database">
     <meta name="author" content="Manon Réau">
     <meta name="title" content="Manon Réau Webpage">
     <meta property="og:locale" content="en_US">
