--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <!-- End Google Tag Manager -->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="description" content="PhD in chemoinformatics, CNAM, GBCM <br> Personal webpage">
+    <meta name="description" content="PhD, Bonvin Lab, UU <br> Personal webpage">
     <meta name="keywords" content="Nuclear receptors, NR-DBIND, Drug Design, CNAM, GBCM, Manon Réau, Réau, Chemoinformatics, CADD, ISDD, M2ISDD, Caflisch, LBT, MTI, BIRL, SupBiotech, Integration of negative data into benchmarking database">
     <meta name="author" content="Manon Réau">
     <meta name="title" content="Manon Réau Webpage">
@@ -50,11 +50,11 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         </ul>
 
         {% if site.github.is_project_page %}
-          <p class="header" id="contact">Laboratoire GBA <br>
-            CNAM <br>
-            2 rue conté<br>
-            75001 Paris, FRANCE<br>
-            <a href="mailto:manon.reau@lecnam.net">manon.reau@lecnam.net</a></p>
+          <p class="header" id="contact">Bonvin Lab, CSB group<br>
+            Utrecht University <br>
+            Padualaan 8<br>
+            3584 CH Utrecht, NL<br>
+            <a href="mailto:m.f.reau@uu.nl">m.f.reau@uu.nl</a></p>
         {% endif %}
 
         {% if site.github.is_user_page %}
